{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 490,
  "lineage": "bd624763-eeb9-cb65-e0d1-4bb8b6730dc6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-1-2-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/networkInterfaces/vm-1-2-nic",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/publicIPAddresses/vm-1-2-ip",
                "subnet_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/virtualNetworks/Vnet-1/subnets/Subnet1-2"
              }
            ],
            "location": "eastus2",
            "name": "vm-1-2-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "RG-VNet1"
          },
          "dependencies": [
            "azurerm_public_ip.vm-1-2-ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet12",
            "azurerm_virtual_network.red1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/networkInterfaces/vm-1-nic",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/publicIPAddresses/vm-1-ip",
                "subnet_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/virtualNetworks/Vnet-1/subnets/Subnet1-1"
              }
            ],
            "location": "eastus2",
            "name": "vm-1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "RG-VNet1"
          },
          "dependencies": [
            "azurerm_public_ip.vm-1-ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.red1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-2-1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/networkInterfaces/vm-2-1-nic",
            "ip_configuration": [
              {
                "name": "ipconfig2",
                "primary": true,
                "private_ip_address": "20.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/publicIPAddresses/vm21ip",
                "subnet_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/virtualNetworks/Vnet-2/subnets/Subnet2-1"
              }
            ],
            "location": "northeurope",
            "name": "vm-2-1-nic",
            "private_ip_address": "20.0.1.4",
            "private_ip_addresses": [
              "20.0.1.4"
            ],
            "resource_group_name": "RG-VNet2"
          },
          "dependencies": [
            "azurerm_public_ip.vm-2-1-ip",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.red2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/networkSecurityGroups/NSG-t38w10-1",
            "location": "eastus2",
            "name": "NSG-t38w10-1",
            "resource_group_name": "RG-VNet1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/networkSecurityGroups/NSG-t38w10-2",
            "location": "northeurope",
            "name": "NSG-t38w10-2",
            "resource_group_name": "RG-VNet2",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG-2RDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/networkSecurityGroups/NSG-t38w10-2/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "NSG-t38w10-2",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "RG-VNet2",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.NSG2",
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG-2WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/networkSecurityGroups/NSG-t38w10-2/securityRules/WEB",
            "name": "WEB",
            "network_security_group_name": "NSG-t38w10-2",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "RG-VNet2",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.NSG2",
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/networkSecurityGroups/NSG-t38w10-1/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "NSG-t38w10-1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "RG-VNet1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.NSG1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/networkSecurityGroups/NSG-t38w10-1/securityRules/WEB",
            "name": "WEB",
            "network_security_group_name": "NSG-t38w10-1",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "RG-VNet1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.NSG1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm-1-2-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/publicIPAddresses/vm-1-2-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "vm-1-2-ip",
            "resource_group_name": "RG-VNet1",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm-1-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/publicIPAddresses/vm-1-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "vm-1-ip",
            "resource_group_name": "RG-VNet1",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm-2-1-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/publicIPAddresses/vm21ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vm21ip",
            "resource_group_name": "RG-VNet2",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/virtualNetworks/Vnet-1/subnets/Subnet1-1",
            "name": "Subnet1-1",
            "resource_group_name": "RG-VNet1",
            "virtual_network_name": "Vnet-1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.red1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/virtualNetworks/Vnet-1/subnets/Subnet1-2",
            "name": "Subnet1-2",
            "resource_group_name": "RG-VNet1",
            "virtual_network_name": "Vnet-1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.red1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "20.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/virtualNetworks/Vnet-2/subnets/Subnet2-1",
            "name": "Subnet2-1",
            "resource_group_name": "RG-VNet2",
            "virtual_network_name": "Vnet-2"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.red2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "red1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/virtualNetworks/Vnet-1",
            "location": "eastus2",
            "name": "Vnet-1",
            "resource_group_name": "RG-VNet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "red2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/virtualNetworks/Vnet-2",
            "location": "northeurope",
            "name": "Vnet-2",
            "resource_group_name": "RG-VNet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "red1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/virtualNetworks/Vnet-1/virtualNetworkPeerings/vnet1_a_vnet2",
            "name": "vnet1_a_vnet2",
            "remote_virtual_network_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/virtualNetworks/Vnet-2",
            "resource_group_name": "RG-VNet1",
            "use_remote_gateways": false,
            "virtual_network_name": "Vnet-1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.red1",
            "azurerm_virtual_network.red2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "red2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet2/providers/Microsoft.Network/virtualNetworks/Vnet-2/virtualNetworkPeerings/vnet2_a_vnet1",
            "name": "vnet2_a_vnet1",
            "remote_virtual_network_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/RG-VNet1/providers/Microsoft.Network/virtualNetworks/Vnet-1",
            "resource_group_name": "RG-VNet2",
            "use_remote_gateways": false,
            "virtual_network_name": "Vnet-2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.red1",
            "azurerm_virtual_network.red2"
          ]
        }
      ]
    }
  ]
}